refactor: Final documentation cleanup and standardization
- Rename all 'in-depth' files to have more descriptive names.
- Standardize the titles and icons of all use case files.
- Update messaging to reflect the current focus on the 'EDU Pack' pilot.
- Update docs.json to reflect all file name and title changes.
- Add icons to pages that were missing them.
- Restructure the 'Core Concepts' section for a more logical flow.

--- a/concepts/continuous-improvement.mdx
+++ b/concepts/continuous-improvement.mdx
@@ -2,6 +2,7 @@
 title: "Continuous Improvement"
 description: "A self-optimizing system that gets smarter over time."
 icon: "arrow-up-trending"
+icon: "arrow-up-trending"
 ---
 
 A static AI system, even a powerful one, provides diminishing returns. Workflows change, new data becomes available, and business priorities evolve. A truly intelligent system must be able to adapt.
