--- a/concepts/how-mindlab-learns.mdx
+++ b/concepts/how-mindlab-learns.mdx
@@ -2,6 +2,7 @@
 title: "How MindLab Learns"
 description: "A system that improves with your feedback."
 icon: "arrow-up-circle"
+icon: "arrow-up-circle"
 ---
 
 The MindLab platform is not a static tool; it is a dynamic intelligence layer that is designed to learn and adapt to your unique business needs. This learning process is a partnership between our sophisticated evaluation architecture and your expert feedback.
