--- a/core-concepts/context-spine.mdx
+++ b/core-concepts/context-spine.mdx
@@ -2,6 +2,7 @@
 title: "The Context Spine"
 description: "A deep dive into the stateful architecture and memory tiers that power the MindLab platform."
 ---
+icon: "brain-circuit"
 
 MindLab is a stateful system by design. Unlike stateless tools that suffer from corporate amnesia, our platform is built on the Context Spine, a sophisticated architecture for managing knowledge and memory across your entire organization.
 
