--- a/core-concepts/flow-engine.mdx
+++ b/core-concepts/flow-engine.mdx
@@ -2,6 +2,7 @@
 title: "The Flow Engine"
 description: "A deep dive into the deterministic, stateful execution layer that provides enterprise-grade guarantees."
 ---
+icon: "gears"
 
 Underpinning the Orchestrator and the Context Spine is the Flow Engine, the stateful execution layer that ensures every workflow is executed with precision, predictability, and resilience.
 
