--- a/core-concepts/orchestrator.mdx
+++ b/core-concepts/orchestrator.mdx
@@ -2,6 +2,7 @@
 title: "The Orchestrator"
 description: "A deep dive into the runtime Mixture-of-Experts (MoE) engine that powers the MindLab platform."
 ---
+icon: "comments"
 
 The core of the MindLab platform is the Orchestrator. It is not a single, monolithic AI, but a runtime Mixture-of-Experts (MoE) engine that intelligently coordinates the work of specialized agents to achieve complex business objectives.
 
