--- a/governance/cadance.mdx
+++ b/governance/cadance.mdx
@@ -1,5 +1,5 @@
 ---
-title: "CADANCE™: In-Depth"
+title: "CADANCE™"
 description: "A deep dive into the CADANCE™ specification."
 icon: "file-code"
 ---
