--- a/use-cases/cross-industry/data-and-analytics.mdx
+++ b/use-cases/cross-industry/data-and-analytics.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Data And Analytics (Coming Soon)"
+title: "Data & Analytics (Coming Soon)"
+description: "A suite of tools for data and analytics."
 icon: "chart-bar"
 ---
 
