--- a/use-cases/cross-industry/finance-and-fpa.mdx
+++ b/use-cases/cross-industry/finance-and-fpa.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Finance And Fpa (Coming Soon)"
----
-title: "Finance And Fpa (Coming Soon)"
+title: "Finance & FP&A (Coming Soon)"
 description: "A suite of tools for finance and financial planning and analysis."
 icon: "chart-line"
 ---
@@ -27,6 +25,7 @@ The MindLab platform provides a suite of tools for finance and financial plannin
 -   **Month-close orchestration; variance narratives with linked ledgers.**
 -   **AP/PO/Invoice triage; duplicate/exception detection.**
 -   **Scenario planning; unit economics packs for exec reviews.**
+
 ### Before MindLab
 
 -   The month-end close process is slow and manual, with a high risk of errors.
