--- a/use-cases/cross-industry/hr-and-talent.mdx
+++ b/use-cases/cross-industry/hr-and-talent.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Hr And Talent (Coming Soon)"
----
-title: "Hr And Talent (Coming Soon)"
+title: "HR & Talent (Coming Soon)"
 description: "A suite of tools for HR and talent acquisition."
 icon: "users"
 ---
@@ -27,6 +25,7 @@ The MindLab platform provides a suite of tools for HR and talent acquisition. Ou
 -   **Role → JD → screen rubric → panel packs.**
 -   **Structured interview notes; bias checks; debrief synthesis.**
 -   **Day-1 runbooks; policy acknowledgement tracking; LMS bridges.**
+
 ### Before MindLab
 
 -   Hiring cycles are slow and manual, with a high risk of bias.
