--- a/use-cases/cross-industry/it-secops-devops.mdx
+++ b/use-cases/cross-industry/it-secops-devops.mdx
@@ -1,7 +1,5 @@
 ---
-title: "It Secops Devops (Coming Soon)"
----
-title: "It Secops Devops (Coming Soon)"
+title: "IT, SecOps, & DevOps (Coming Soon)"
 description: "A suite of tools for IT, SecOps, and DevOps."
 icon: "server"
 ---
@@ -27,6 +25,7 @@ The MindLab platform provides a suite of tools for IT, SecOps, and DevOps. Our p
 -   **Pager events → guided diagnosis; safe automation with approvals.**
 -   **CAB prep; blast-radius estimation; rollback plans.**
 -   **Vuln dedupe & prioritization; periodic access recertification.**
+
 ### Before MindLab
 
 -   Incident response is slow and manual, with a high risk of human error.
