--- a/use-cases/cross-industry/knowledge-ops-and-research.mdx
+++ b/use-cases/cross-industry/knowledge-ops-and-research.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Knowledge Ops And Research (Coming Soon)"
----
-title: "Knowledge Ops And Research (Coming Soon)"
+title: "Knowledge Ops & Research (Coming Soon)"
 description: "A suite of tools for knowledge management and research."
 icon: "book"
 ---
@@ -26,6 +24,7 @@ The MindLab platform provides a suite of tools for knowledge management and rese
 -   **Literature/RFC/RFP synthesis with source-linked briefs.**
 -   **Competitive & market intel digests; delta tracking week-over-week.**
 -   **Policy/procedure harmonization across regions.**
+
 ### Before MindLab
 
 -   Knowledge is fragmented across a variety of sources, making it difficult to find and synthesize information.
