--- a/use-cases/cross-industry/legal-and-compliance.mdx
+++ b/use-cases/cross-industry/legal-and-compliance.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Legal And Compliance (Coming Soon)"
----
-title: "Legal And Compliance (Coming Soon)"
+title: "Legal & Compliance (Coming Soon)"
 description: "A suite of tools for legal and compliance operations."
 icon: "gavel"
 ---
@@ -27,6 +25,7 @@ The MindLab platform provides a suite of tools for legal and compliance operatio
 -   **Contract review with risk heat-maps; fallback clauses.**
 -   **Policy mapping to frameworks (SOC2/ISO/FERPA/GDPR).**
 -   **Audit evidence packets with tamper-evident trace exports.**
+
 ### Before MindLab
 
 -   Contract reviews are slow and manual, with a high risk of human error.
