--- a/use-cases/cross-industry/marketing-and-content.mdx
+++ b/use-cases/cross-industry/marketing-and-content.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Marketing And Content (Coming Soon)"
----
-title: "Marketing And Content (Coming Soon)"
+title: "Marketing & Content (Coming Soon)"
 description: "A suite of tools for marketing and content operations."
 icon: "bullhorn"
 ---
@@ -27,6 +25,7 @@ The MindLab platform provides a suite of tools for marketing and content operati
 -   **Brief → multiformat assets with brand/style schema.**
 -   **SEO plan; content gap analysis; performance commentary.**
 -   **A/B orchestration; learnings to playbooks.**
+
 ### Before MindLab
 
 -   Content creation is slow and manual, making it difficult to keep up with the demands of the modern marketing landscape.
