--- a/use-cases/cross-industry/pmo-and-operations.mdx
+++ b/use-cases/cross-industry/pmo-and-operations.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Pmo And Operations (Coming Soon)"
----
-title: "Pmo And Operations (Coming Soon)"
+title: "PMO & Operations (Coming Soon)"
 description: "A suite of tools for project management and operations."
 icon: "clipboard-check"
 ---
@@ -26,6 +24,7 @@ The MindLab platform provides a suite of tools for project management and operat
 
 -   **Auto status roll-ups; roadmap deltas; dependency alerts.**
 -   **SOP generation from tribal knowledge; audit prep.**
+
 ### Before MindLab
 
 -   Reporting is slow and manual, making it difficult to get a real-time view of project status.
