--- a/use-cases/cross-industry/sales-and-revenue.mdx
+++ b/use-cases/cross-industry/sales-and-revenue.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Sales And Revenue (Coming Soon)"
----
-title: "Sales And Revenue (Coming Soon)"
+title: "Sales & Revenue (Coming Soon)"
 description: "A suite of tools for sales and revenue operations."
 icon: "dollar-sign"
 ---
@@ -28,6 +26,7 @@ The MindLab platform provides a suite of tools for sales and revenue operations.
 -   **Account dossiers from CRM/notes; call summaries with action items.**
 -   **Proposal/SoW drafts with clause constraints; discount guardrails.**
 -   **Pipeline hygiene nudges; renewal risk flags.**
+
 ### Before MindLab
 
 -   Sales cycles are slow and manual, with a high risk of human error.
