--- a/use-cases/industry/construction-and-real-estate.mdx
+++ b/use-cases/industry/construction-and-real-estate.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Construction And Real Estate (Coming Soon)"
----
-title: "Construction And Real Estate (Coming Soon)"
+title: "Construction & Real Estate (Coming Soon)"
 description: "A suite of tools for the construction and real estate industries."
 icon: "building"
 ---
@@ -25,6 +23,7 @@ The MindLab platform provides a suite of tools for the construction and real est
 -   **Bid cycle time ↓**
 -   **Schedule slippage ↓**
 -   **Incident rates ↓**
+
 ### Before MindLab
 
 -   Bid estimation is a slow and manual process, with a high risk of errors.
