--- a/use-cases/industry/energy-and-utilities.mdx
+++ b/use-cases/industry/energy-and-utilities.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Energy And Utilities (Coming Soon)"
----
-title: "Energy And Utilities (Coming Soon)"
+title: "Energy & Utilities (Coming Soon)"
 description: "A suite of tools for the energy and utilities industries."
 icon: "bolt"
 ---
@@ -25,6 +23,7 @@ The MindLab platform provides a suite of tools for the energy and utilities indu
 -   **SAIDI/SAIFI improvements**
 -   **Truck rolls ↓**
 -   **Compliance breaches ↓**
+
 ### Before MindLab
 
 -   Outage response is slow and manual, with a high risk of human error.
