--- a/use-cases/industry/life-sciences-and-pharma.mdx
+++ b/use-cases/industry/life-sciences-and-pharma.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Life Sciences And Pharma (Coming Soon)"
----
-title: "Life Sciences And Pharma (Coming Soon)"
+title: "Life Sciences & Pharma (Coming Soon)"
 description: "A suite of tools for the life sciences and pharma industries."
 icon: "flask"
 ---
@@ -24,6 +22,7 @@ The MindLab platform provides a suite of tools for the life sciences and pharma 
 -   **GxP:** The platform is designed to help you to comply with Good x Practice (GxP) regulations.
 -   **Audit trails:** The platform provides a complete and immutable audit trail for every action that is taken.
 -   **Role segregation:** The platform is designed to support role segregation.
+
 ### Before MindLab
 
 -   Clinical trial design is a slow and manual process, with a high risk of errors.
