--- a/use-cases/industry/logistics-and-supply-chain.mdx
+++ b/use-cases/industry/logistics-and-supply-chain.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Logistics And Supply Chain (Coming Soon)"
----
-title: "Logistics And Supply Chain (Coming Soon)"
+title: "Logistics & Supply Chain (Coming Soon)"
 description: "A suite of tools for the logistics and supply chain industries."
 icon: "truck"
 ---
@@ -25,6 +23,7 @@ The MindLab platform provides a suite of tools for the logistics and supply chai
 -   **OTIF ↑**
 -   **Detention/demurrage ↓**
 -   **Exception resolution time ↓**
+
 ### Before MindLab
 
 -   Demand forecasting is inaccurate, leading to stockouts and excess inventory.
