--- a/use-cases/industry/manufacturing-and-industry-4-0.mdx
+++ b/use-cases/industry/manufacturing-and-industry-4-0.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Manufacturing And Industry 4 0 (Coming Soon)"
----
-title: "Manufacturing And Industry 4 0 (Coming Soon)"
+title: "Manufacturing & Industry 4.0 (Coming Soon)"
 description: "A suite of tools for the manufacturing industry."
 icon: "industry"
 ---
@@ -25,6 +23,7 @@ The MindLab platform provides a suite of tools for the manufacturing industry. O
 -   **Safety gates:** The platform includes safety gates that are designed to prevent accidents.
 -   **OT network isolation:** The platform is designed to isolate your operational technology (OT) network.
 -   **Export controls:** The platform is designed to help you to comply with export control regulations.
+
 ### Before MindLab
 
 -   Maintenance is reactive, leading to unexpected downtime and costly repairs.
