--- a/use-cases/industry/public-sector-and-gov.mdx
+++ b/use-cases/industry/public-sector-and-gov.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Public Sector And Gov (Coming Soon)"
----
-title: "Public Sector And Gov (Coming Soon)"
+title: "Public Sector & Gov (Coming Soon)"
 description: "A suite of tools for the public sector and government."
 icon: "landmark"
 ---
@@ -25,6 +23,7 @@ The MindLab platform provides a suite of tools for the public sector and governm
 -   **Records laws:** The platform is designed to help you to comply with records laws.
 -   **Accessibility:** The platform is designed to be accessible to all users.
 -   **Security clearance scopes:** The platform is designed to support security clearance scopes.
+
 ### Before MindLab
 
 -   Case management is a slow and manual process, with a high risk of errors.
