--- a/use-cases/industry/retail-and-ecommerce.mdx
+++ b/use-cases/industry/retail-and-ecommerce.mdx
@@ -1,7 +1,5 @@
 ---
-title: "Retail And Ecommerce (Coming Soon)"
----
-title: "Retail And Ecommerce (Coming Soon)"
+title: "Retail & eCommerce (Coming Soon)"
 description: "A suite of tools for the retail and eCommerce industries."
 icon: "store"
 ---
@@ -26,6 +24,7 @@ The MindLab platform provides a suite of tools for the retail and eCommerce indu
 -   **NPS ↑**
 -   **Return abuse ↓**
 -   **Catalog error rate ↓**
+
 ### Before MindLab
 
 -   Assortment planning is a manual and time-consuming process, with a high risk of errors.
